Fix issue with rich text toolbar being gone in captions
Fixes #7049.

This changes how the caption field works in gallery items, so that the rich text toolbar is present. It was pushed upwards, and therefore hidden by an overflow rule. But that overflow rule was there to ensure that if you write an essay as a caption, the caption scrolls.

--- a/core-blocks/gallery/editor.scss
+++ b/core-blocks/gallery/editor.scss
@@ -34,6 +34,16 @@
 		width: calc( 100% - 8px );
 		left: 4px;
 		margin-top: -4px;
+
+		// if this inline toolbar has negative margin, it's hidden by the overflow that we need for scrolling long captions
+		.editor-rich-text__inline-toolbar {
+			top: 0;
+		}
+
+		// make extra space for the inline toolbar
+		figcaption {
+			padding-top: 48px;
+		}
 	}
 
 	.components-form-file-upload,
